tests/type_args_strict/type_args_strict.exp
Error: test.js:21
 21: var c: MyClass = new MyClass(0); // error, missing argument list (1)
            ^^^^^^^ MyClass. Application of polymorphic type needs <list of 1 argument>. (Can use `*` for inferrable ones)

Error: test.js:34
 34: var c2: MyClass2 = new MyClass2(0, ""); // error, missing argument list (1-2)
             ^^^^^^^^ MyClass2. Application of polymorphic type needs <list of 1-2 arguments>. (Can use `*` for inferrable ones)

Error: test.js:42
 42: var o: MyObject = { x: 0 }; // error, missing argument list
            ^^^^^^^^ MyObject. Application of polymorphic type needs <list of 1 argument>. (Can use `*` for inferrable ones)

Error: test.js:46
 46: type MySubobject = { y: number } & MyObject; // error, missing argument list
                                        ^^^^^^^^ MyObject. Application of polymorphic type needs <list of 1 argument>. (Can use `*` for inferrable ones)

Error: test.js:54
     v-----------------------------------------------------------------------------
 54: interface MySubinterface extends MyInterface { // error, missing argument list
 55:   y: number;
 56: }
     ^ super of MySubinterface. Application of polymorphic type needs <list of 1 argument>. (Can use `*` for inferrable ones)

Error: test.js:75
 75: var poly: MyClass<> = new MyClass; // error
               ^^^^^^^^^ type application of polymorphic type: class type: MyClass. Too few type arguments. Expected at least 1
 14: class MyClass<T> {
                   ^ See type parameters of definition here

Error: test.js:79
 79: var mono: MyClass3<> = new MyClass3; // error
                            ^^^^^^^^^^^^ MyClass3. Expected polymorphic type instead of
 79: var mono: MyClass3<> = new MyClass3; // error
               ^^^^^^^^^^ class type: MyClass3


Found 7 errors
